src/test/resources/acceptance/reject/returnMultipleThings.ul
int foo ()
{
    return "one" "two";
}